RESOLVED FIXED85476
[Gtk] ImageDiff crashes when it can't open a display
https://bugs.webkit.org/show_bug.cgi?id=85476
Summary [Gtk] ImageDiff crashes when it can't open a display
Zan Dobersek
Reported 2012-05-03 05:00:57 PDT
This happens regularly on the GTK 64-bit Debug builder. Here's stderr output: (ImageDiff:14017): Gdk-WARNING **: cannot open display
Attachments
Patch (1.39 KB, patch)
2012-05-03 05:22 PDT, Zan Dobersek
no flags
Zan Dobersek
Comment 1 2012-05-03 05:03:40 PDT
The problem originates from the gdk_init function call[1]. It turns out GdkPixbufLoader doesn't actually require gdk_init() to be called, meaning this should be replaced by only calling g_type_init() and the crashes should go away. [1] http://trac.webkit.org/browser/trunk/Tools/DumpRenderTree/gtk/ImageDiff.cpp#L181
Zan Dobersek
Comment 2 2012-05-03 05:22:51 PDT
Zan Dobersek
Comment 3 2012-05-03 06:15:09 PDT
Comment on attachment 139986 [details] Patch Clearing flags on attachment: 139986 Committed r115967: <http://trac.webkit.org/changeset/115967>
Zan Dobersek
Comment 4 2012-05-03 06:15:24 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.