[Gtk] ImageDiff crashes when it can't open a display https://bugs.webkit.org/show_bug.cgi?id=85476

Reviewed by Martin Robinson.

Replace gdk_init() initialization call with the g_type_init()
call. GdkPixbufLoader doesn't actually need the current call to be
made and this change will also remove crashes when ImageDiff
is started in an environment without a DISPLAY env.

* DumpRenderTree/gtk/ImageDiff.cpp:
(main):


Canonical link: https://commits.webkit.org/103041@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115967 268f45cc-cd09-0410-ab3c-d52691b4dbfc